# law-jurisdiction-ai

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TEAM_NOTES.txt  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  redis_client.py
backend/app/agents/: case_law_agent.py  classification_agent.py  federal_law_agent.py  graph.py  intake_agent.py  opinion_agent.py  parsing.py  referral_agent.py  state.py  state_law_agent.py
backend/app/middleware/: prompt_guard.py
backend/app/models/: models.py
backend/app/routers/: auth.py  chat.py  conversations.py
backend/app/schemas/: auth.py  conversation.py
backend/app/tools/: congress_tool.py  cornell_lii_tool.py  courtlistener_tool.py  lawyer_finder_tool.py
backend/app/utils/: auth.py  pdf_export.py  pii.py
backend/scripts/: run_workflow.py  ws_smoke.py
frontend/: .env.example  README_FRONTEND.py  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/chat/: ChatInput.tsx  LawyerCard.tsx  MessageBubble.tsx  ResultsPanel.tsx  ScoreGauge.tsx  WelcomeScreen.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/hooks/: useAuth.tsx  useChat.ts
frontend/src/pages/: AuthPage.tsx  ChatPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
