[project]
name = "lexai-backend"
version = "0.1.0"
description = "LexAI — US Jurisdiction Assistant (multi-agent legal backend)"
requires-python = ">=3.11"
dependencies = [
    # Web framework + ASGI server ([standard] adds websocket support — required)
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",

    # Database — async SQLAlchemy + PostgreSQL driver
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",

    # Config + validation.
    # pydantic>=2.8 required: 2.7.0's v1-compat layer (used by langchain-core)
    # crashes on Python 3.12.4+ (ForwardRef._evaluate recursive_guard).
    "pydantic-settings==2.2.1",
    "pydantic>=2.8,<3",

    # Auth — JWT tokens + password hashing
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",

    # Redis — async client for caching (async support is built in; no extra needed)
    "redis==5.0.4",

    # HTTP client — Congress.gov, Cornell LII, CourtListener, Google Maps
    "httpx==0.27.0",

    # LangGraph + LangChain — multi-agent framework.
    # NOTE: ranges (not exact pins) — the original requirements.txt pinned
    # langchain-openai==0.1.6 (needs langchain-core<0.2) alongside
    # langchain-core==0.2.5, which is unsatisfiable. uv.lock pins exact versions.
    "langchain-openai>=0.1.7,<0.2",
    "langgraph>=0.1.5,<0.2",
    "langchain-core>=0.2.5,<0.3",

    # PDF generation — Option A: programmatic PDF (utils/pdf_export.py)
    "reportlab==4.1.0",
]

[project.optional-dependencies]
# PDF generation — Option B: HTML → PDF (easier to style).
# Install with: uv sync --extra pdf-html
pdf-html = ["weasyprint==61.2"]

[dependency-groups]
# Dev-only tooling. Installed by `uv sync`, excluded from the Docker image
# (which runs `uv sync --frozen --no-dev`).
dev = [
    "ruff>=0.14",
    "pre-commit>=4.0",
]

[tool.uv]
# This is a deployable application, not an importable package — don't build a wheel for it.
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
    "E501",   # line length — enforced by the formatter instead
    "B008",   # function calls in arg defaults — idiomatic for FastAPI Depends()/Query()
    "UP042",  # str+Enum vs StrEnum — kept as-is; StrEnum changes str() on a persisted value
]

[tool.ruff.format]
docstring-code-format = false
